2005-06-17
==========
After 21 months of development ADRT has become open source.